# mini-hackathon-primary-15

./: README.md
00-proj-name/: README.md
1262-polkadot wallet-bofu/: README.md
1262-polkadot wallet-bofu/code/web3media-main/: README.md
1262-polkadot wallet-bofu/code/web3media-main/pallets/custom-pallet/: Cargo.toml
1262-polkadot wallet-bofu/code/web3media-main/pallets/custom-pallet/src/: lib.rs
1262-polkadot wallet-bofu/code/web3media-main/runtime/: Cargo.toml
1262-polkadot wallet-bofu/code/web3media-main/runtime/src/: lib.rs
1492-expo-cert/: README.md
1492-expo-cert/code/: .gitignore
1492-expo-cert/code/expo-cert-app/: package.json
1492-expo-cert/code/expo-cert-app/src/: app.test.ts  app.ts
1492-expo-cert/code/expo-cert-app/src/constants/: constants.ts
1492-expo-cert/code/expo-cert-app/src/error/: businessError.ts
1492-expo-cert/code/expo-cert-app/src/models/: company.ts  exhibitionApply.ts  passCert.ts  person.ts
1492-expo-cert/code/expo-cert-app/src/services/: accountServices.ts  exhibitionApplyServices.ts  passCertServices.ts
1492-expo-cert/code/expo-cert-app/src/utils/: utils.ts
1492-expo-cert/code/polkadot-sdk-solo-template-dev-courses/pallets/expo-cert/: Cargo.toml
1492-expo-cert/code/polkadot-sdk-solo-template-dev-courses/pallets/expo-cert/src/: lib.rs  mock.rs  tests.rs
1492-expo-cert/code/polkadot-sdk-solo-template-dev-courses/pallets/expo-cert/src/model/: model.rs
1492-expo-cert/code/polkadot-sdk-solo-template-dev-courses/runtime/: Cargo.toml
1492-expo-cert/code/polkadot-sdk-solo-template-dev-courses/runtime/src/: lib.rs
1542-kong-foo/: customSpec.json
1542-kong-foo/pallets/poe/: Cargo.toml
1542-kong-foo/pallets/poe/src/: lib.rs
1542-kong-foo/pallets/template/src/: lib.rs  tests.rs  weights.rs
1545-nft-swap/: README.md
1545-nft-swap/code/nft_swap_substrate/pallets/nft/src/: lib.rs  tests.rs
1545-nft-swap/code/nft_swap_substrate/pallets/nft_market/: Cargo.toml
1545-nft-swap/code/nft_swap_substrate/pallets/poe/: Cargo.toml
1545-nft-swap/code/nft_swap_substrate/runtime/: Cargo.toml
1545-nft-swap/code/nft_swap_substrate/runtime/src/: lib.rs
1545-nft-swap/code/nft_swap_web/: next.config.js  package-lock.json  package.json
1545-nft-swap/code/nft_swap_web/src/components/: App.tsx  ConnectButton.tsx  MintButton.tsx  NftCard.tsx  NftList.tsx  NftOffer.tsx  SubstrateProvider.tsx
1545-nft-swap/code/nft_swap_web/src/config/: index.ts
1545-nft-swap/code/nft_swap_web/src/pages/: index.tsx
1545-nft-swap/code/nft_swap_web/src/utils/: utils.ts
(+4 files in other folders)
